--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="https://res.cloudinary.com/dr6lvwubh/raw/upload/v1581441981/Anicons/anicons-regular.css"
         rel="stylesheet">
     <!-- Add a link to your properly named CSS file here -->
-    <link rel="stylesheet" href="Roberts.styles.css">
+    <link rel="stylesheet" href="roberts.styles.css">
 </head>
 
 <body>
